# rust_docserver

./: .env  .gitignore  Cargo.toml
migrations/: 20240704203843_initial.sql  20240708001424_sample.sql
resources/design/: Diagram1.dia
resources/template/: base.tmpl  doclist.tmpl  nav.tmpl  personlist.tmpl  taglist.tmpl  typelist.tmpl
src/: bin.rs  controllers.rs  errors.rs  models.rs  timeutil.rs  views.rs
src/api/: doc.rs
src/controllers/: doc.rs  person.rs  tag.rs  type.rs
src/views/: doc.rs  person.rs  tag.rs  type.rs
