[package]
name = "rust_docserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name="docserver"
path="src/bin.rs"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["alloc"] }
minijinja = { version = "2.1.2", features = ["builtins", "loader"] }
minijinja-autoreload = "2.1.2"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
